Added OrgLists controller and did initial setup work

--- a/LearnNetCoreApi/appsettings.json
+++ b/LearnNetCoreApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Organization" :  "Server=(local);initial catalog=Organization;Trusted_Connection=true;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
