--- a/src/LearnNetCoreApi/LearnNetCoreApi.csproj
+++ b/src/LearnNetCoreApi/LearnNetCoreApi.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.4" />
   </ItemGroup>
 
   <ItemGroup>
